--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=dsfdsfdsfdfsdfdsffyuyt">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=fdgffdg">
 <div class="my_bd_controller">
 	<ul class="layout ul_contrl">
 		<li >
@@ -18,7 +18,7 @@
 			</p>
 			<p></p>
 			<p ng-click="showShareTip();">
-				<img class="imgwid" src="wx_share/img/my_bd/song.png">
+				<img class="song_imgwid" src="wx_share/img/my_bd/song.png">
 				<a href="###" class="fontwid">送给好友</a>
 			</p>
 			<p class="kong_wid45"></p>
@@ -34,7 +34,7 @@
 		<div class="cell_code">
 			<div class="main_font left">
 				<li>1.长按右侧二维码关注 [诺贝]</li>
-				<li>2.在微信号底部菜单 </br>&nbsp;&nbsp;&nbsp;[ 我的保险劵 ] 投保</li>
+				<li>2.在微信号底部菜单  [ 我的保险劵 ] 投保</li>
 				<li>3.有效期：2016.04.26 ~ 07.26</li>
 			</div>
 			<!-- 二维码 -->
