modify the bugs

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=fdafagfgf">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=fdafafaagfgf">
 	<div class="my_bd_controller">
 		<ul class="layout ul_contrl">
 			<li >
@@ -14,12 +14,12 @@
 				<p class="kong_wid45"></p>
 				<p ng-click="addCoupon();">
 
-					<img class="imgwid" src="wx_share/img/my_bd/money.png">
+					<img class="imgwid" src="wx_share/img/my_bd/money.png?v=32">
 					<a href="###" class="fontwid">免费领取</a>
 				</p>
 				<p></p>
 				<p ng-click="showShareTip();">
-					<img class="song_imgwid" src="wx_share/img/my_bd/song.png">
+					<img class="song_imgwid" src="wx_share/img/my_bd/song.png?v=32">
 
 					<a href="###" class="fontwid">送给好友</a>
 				</p>
