--- a/app/partials/bd_index.html
+++ b/app/partials/bd_index.html
@@ -52,10 +52,10 @@ body{
 </style>
 <div class="bd_container" >
 	<div class="cell ">
-		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('1')" class="btn btn_n_primary " >上传我的保单照片</a>
+		<a href="javascript:void(0)" id="chooseImage" ng-click="upLoadMyBdPic()" class="btn btn_n_primary " >上传我的保单照片</a>
 	</div>
 	<div class="cell " style="margin-top: 0.26rem">
-		<a href="javascript:void(0)" id="chooseImage" ng-click="goUpload('2')" class="btn special-btn" >上传家人保单照片</a>
+		<a href="javascript:void(0)" id="chooseImage" ng-click="upLoadFamilyBdPic()" class="btn special-btn" >上传家人保单照片</a>
 	</div>
 </div>
 <div class="bd_tail_container" >
