--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -73,7 +73,9 @@ body{
   <div class="text_container"  >
     <p class="subtitle" >您的综合评分</p>
     <p class="tip" >低于平均水平</p>
-    <p class="bd_yz" style="display:none;" >保单验真 > </p>
+
+     
+    <p class="bd_yz" ng-click="goVerfiy()">保单验真 > </p>
 
   </div>
 
