--- a/app/css/bdm_detail.css
+++ b/app/css/bdm_detail.css
@@ -245,6 +245,6 @@ table td {
 .fail-tip{
 	color:#555;
 	float:right;
-	margin:0.5rem 0.8rem 0 0;
+	margin:0.5rem 50px 0 0;
 	text-align: center;
 }
