--- a/app/wx_share/css/style.css
+++ b/app/wx_share/css/style.css
@@ -11,7 +11,8 @@ a, img{
 }
 
 button,input,optgroup,select,textarea{
-    -webkit-appearance:none; /*去掉webkit默认的表单样式*/}a,button,input,optgroup,select,textarea{
+    -webkit-appearance:none; /*去掉webkit默认的表单样式*/
+    }a,button,input,optgroup,select,textarea{
     -webkit-tap-highlight-color:rgba(0,0,0,0); /*去掉a、input和button点击时的蓝色外边框和灰色半透明背景*/}input::-webkit-input-placeholder{
     color:#ccc; /*修改webkit中input的planceholder样式*/}input:focus::-webkit-input-placeholder{
     color:#f00; /*修改webkit中focus状态下input的planceholder样式*/}body{
