--- a/app/wx_share/partials/bd_part.html
+++ b/app/wx_share/partials/bd_part.html
@@ -1,143 +1,97 @@
+<link rel="stylesheet" href="wx_share/css/bd_part.css?rev=rfdfdsfdd">
 <div id="wrapper" class="wrapper">
-
-	<div ng-if="coupon_id==2">
-		<img src="wx_share/img/tb_header.png" style="width:100%;max-height:400px;">
-	</div>
-
-
-	   <header class="header" ng-if="coupon_id==1">
-                <a href="wx_coupon_list.html" class="header-return">
-                               <img src="wx_share/img/tg_return.png" style=""/>
-                       </a>
-                       <div class="header-title">
-                                       <b>天安人寿</b>100万航空意外险
-                       </div>
-                       <div class="header-sub-title">
-                               <div class="fl">
-                                       <img src="wx_share/img/tg_plane.png" />
-                               </div>
-                               <div class="fl">
-                                       <p>飞机人身意外伤害身故及</p>
-                                       <p>伤残最高赔付100万元</p>
-                               </div>
-                       </div>
-               <div>
-               </div>
-
-       </header>
-
-
-	<!-- /header -->
-	<div style="" class="container">
-		<form class="" role="form" name="registration" novalidate>
-			<div class="cell_title" style="color:#247ad1">
-				被保人信息
-				<div class="line"></div>
+	<div class="bd_part_controller">
+		<ul class="layout ul_contrl">
+			<li>
+				<p>诺贝保险管家</p>
+				<p>助您出行无忧</p>
+			</li>
+			<li></li>
+			<li>全球航班通用</li>
+		</ul>
+		<div class="bd_part_main paddLeft">
+			<form class="" role="form" name="registration" novalidate>
+			<div class="bd_part_tit">
+				<img src="wx_share/img/my_bd//bx_logo.jpg">
+				<span>被保人信息</span>
 			</div>
-
-			<div class="cell_sub_title ">姓名</div>
-			<div class="cell">
-				<div class="cell_hd cell_hd_border cell_primary">
-					<input type="text"  onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_name_focus']);"   class="ipt" ng-minlength="1"  name="username" ng-model="user.username" required chinese />
-				</div>
-			</div>
-			<div class="cell"  style="color:red"
-            ng-show="registration.username.$dirty && registration.username.$invalid || username_server_reason">
-					<small class="error" 
-            ng-show="registration.username.$error.required">姓名必填</small>
-            	<small class="error"  ng-show="registration.username.$error.chinese">姓名必须是汉字!</small>
+			<div class="bd_part_input ">
+				<input type="text" placeholder="姓名"   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_name_focus']);" ng-minlength="1"  name="username" ng-model="user.username" required chinese >
+				<div class="cell"  style="color:red" ng-show="registration.username.$dirty && registration.username.$invalid || username_server_reason">
+					<small class="error" ng-show="registration.username.$error.required">姓名必填</small>
+            		<small class="error"  ng-show="registration.username.$error.chinese">姓名必须是汉字!</small>
                     <small class="error" ng-show="username_server_reason">{{username_server_reason}}</small>
-			</div>
-
-            <div class="cell_sub_title ">身份证</div>
-
-
-			<div class="cell ">
-				<div class="cell_hd cell_hd_border cell_primary">
-					<input type="text"   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_socialid_focus']);"    class="ipt" ng-minlength="18" ng-maxlength="18"  name="social_id" ng-model="user.social_id" required />
-				</div>
-			</div>
-
-
-			<div class="cell"  style="color:red"
-            ng-show="registration.social_id.$dirty && registration.social_id.$invalid || card_numer_server_reason">
+		        </div>
+				<input type="text" placeholder="身份证"  ng-minlength="18" ng-maxlength="18"  name="social_id" ng-model="user.social_id" required >
+				<div class="cell"  style="color:red" ng-show="registration.social_id.$dirty && registration.social_id.$invalid || card_numer_server_reason">
 					<small class="error" ng-show="registration.social_id.$error.required">身份证必填</small>
-					<small class="error" 
-                ng-show="registration.social_id.$error.minlength">身份证必须是18位</small>
-					<small class="error" 
-                ng-show="registration.social_id.$error.maxlength">身份证必须是18位</small>
+					<small class="error" ng-show="registration.social_id.$error.minlength">身份证必须是18位</small>
+					<small class="error" ng-show="registration.social_id.$error.maxlength">身份证必须是18位</small>
                     <small class="error" ng-show="card_numer_server_reason">{{card_numer_server_reason}}</small>
-			</div>
-			<div class="cell_sub_title ">手机号码</div>
-			<div class="cell">
-				<div class="cell_hd cell_hd_border cell_primary">
-					<input type="number"   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_mobile_focus']);"   class="ipt" ng-minlength="11" ng-maxlength="11" name="mobile" ng-model="user.mobile" required />
 				</div>
-			</div>
-			<div class="cell"  style="color:red"
-            ng-show="registration.mobile.$dirty && registration.mobile.$invalid || mobile_server_reason">
-					<small class="error" 
-            ng-show="registration.mobile.$error.required">手机号必填</small>
-					<small class="error" 
-                ng-show="registration.mobile.$error.minlength">手机号必须是11位数字</small>
-					<small class="error" 
-                ng-show="registration.mobile.$error.maxlength">手机号必须是11位数字</small>
+				<input type="number" placeholder="手机号"  ng-minlength="11" ng-maxlength="11" name="mobile" ng-model="user.mobile" required>
+				<div class="cell"  style="color:red" ng-show="registration.mobile.$dirty && registration.mobile.$invalid || mobile_server_reason">
+					<small class="error" ng-show="registration.mobile.$error.required">手机号必填</small>
+					<small class="error" ng-show="registration.mobile.$error.minlength">手机号必须是11位数字</small>
+					<small class="error" ng-show="registration.mobile.$error.maxlength">手机号必须是11位数字</small>
                     <small class="error" ng-show="mobile_server_reason">{{mobile_server_reason}}</small>
-			</div>
-
-
-			<div  ng-if="coupon_id==2">
-				<div class="cell_sub_title ">航班号</div>
-				<div class="cell ">
-					<div class="cell_hd cell_hd_border cell_primary">
-						<input type="text"   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_hangban_focus']);"    class="ipt"   name="flight_no" ng-model="user.flight_no" required />
-					</div>
-				</div>
-			</div>
-
-			<div class="cell"  style="color:red"
-            ng-show="registration.flight_no.$dirty && registration.flight_no.$invalid || card_numer_server_reason">
+		        </div>
+				<input type="text" placeholder="航班号"  name="flight_no" ng-model="user.flight_no" required>
+				<div class="cell"  style="color:red" ng-show="registration.flight_no.$dirty && registration.flight_no.$invalid || card_numer_server_reason">
 					<small class="error" ng-show="registration.flight_no.$error.required">航班号必填</small>
-				
-                    <small class="error" ng-show="card_numer_server_reason">{{card_numer_server_reason}}</small>
-			</div>
-
-
-			<div class="cell_sub_title ">保障日期</div>
-			<div class="cell ">
-				<div class="cell_hd cell_hd_border cell_primary weui_select_before" >
-					<input type="date" class="ipt "   onfocus="_hmt.push(['_trackEvent', 'wx_share_toubao', 'wx_share_toubao_mobile_focus']);"    style="border:none;height:50px;appearance:none;-webkit-appearance:none;" placeholder="yyyy-MM-dd" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-model="user.insurance_date" required  />
+				    <small class="error" ng-show="card_numer_server_reason">{{card_numer_server_reason}}</small>
 				</div>
+				<input style="background:url(wx_share/img/jian.png) no-repeat 95% center;background-size: .17rem .17rem; -webkit-appearance:none;" type="date" placeholder="保障期间" min="{{minDate | date:'yyyy-MM-dd'}}" max="{{maxDate | date:'yyyy-MM-dd'}}" name="insurance_date" ng-model="user.insurance_date" required >
+				<div class="cell"  style="color:red" ng-show="registration.insurance_date.$dirty && registration.insurance_date.$invalid || insurance_date_server_reason">
+	            	<small class="error" ng-show="registration.insurance_date.$error.min">保障日期最早从明天开始</small>
+	            	<small class="error" ng-show="registration.insurance_date.$error.max">保障日期超过最大日期2016年10月26</small>
+	                <small class="error" ng-show="insurance_date_server_reason">{{insurance_date_server_reason}}</small>
+		        </div>
+				<ul class="layout">
+					<li class="left ">
+						保费：原价<span class="font_red">20元</span>
+					</li>
+					<li class="right">
+						由诺贝保险管家<span class="font_red">免费赠送</span>
+					</li>
+				</ul>
 			</div>
-			<div class="cell"  style="color:red"
-            ng-show="registration.insurance_date.$dirty && registration.insurance_date.$invalid || insurance_date_server_reason">
-            <!--
-					<small class="error" ng-show="registration.insurance_date.$error.required">保障日期必填2017年2月28日</small>-->
-            	<small class="error" ng-show="registration.insurance_date.$error.min">保障日期最早从明天开始</small>
-            	<small class="error" ng-show="registration.insurance_date.$error.max">保障日期超过最大日期2016年10月26</small>
-                    <small class="error" ng-show="insurance_date_server_reason">{{insurance_date_server_reason}}</small>
+			<div class="item">
+				<input type="checkbox" id="chek" ng-model="user.know_contract" name="know_contract" required >
+					我已阅读
+				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">
+					产品条款及投保须知
+				</a>
+				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">
+					产品条款及投保须知
+				</a>
 			</div>
-			<div class="cell_title " style="font-size:15px;">
-				保费：原价<span style="color:#3e85d4;font-size:20px;" >20</span>元 <span class="fr">由诺贝保险管家免费赠送</span>
-				<div class="line"></div>
-			</div>
-			<div class="cell_title ">
-				<input type="checkbox" style="width:20px;height:20px; vertical-align:middle;"   ng-model="user.know_contract" name="know_contract" required > 我已阅读
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/130" class="blue"  ng-if="coupon_id==2">产品条款及投保须知</a>
-				<a href="http://web.youbaowuxian.com/ybwx-web/api/web_page/1" class="blue"  ng-if="coupon_id==1">产品条款及投保须知</a>
-				<div class="line"></div>
-
-			</div>
-			<div class="cell"  style="color:red" ng-show="server_reason">
-                    <small class="error" ng-show="server_reason">{{server_reason}}</small>
-			</div>
-			<div class="cell" >
-				<a href="javascript:void(0)" class=""  ng-class="registration.$invalid  ? 'btn btn_primary btn_disabled' : 'btn btn_primary' "  ng-click='submit()' id="submitButton"  style="font-size:18px;">确认投保</a>
-			
-			</div>
-		</form>
-	</div>
-
+		    <div class="cell"  style="color:red" ng-show="server_reason">
+          	  <small class="error" ng-show="server_reason">{{server_reason}}</small>
+		    </div>
+		</div>
+		<form>
+	    <div class="bd_footer" ng-click='submit()' id="submitButton"  >确认投保</div>
+    </div>
 </div>
+<!-- <script>
+	window.onload = function(){ var o=document.getElementByIdx_x("searchKey"); o.setAttribute("valueCache",o.value); o.onblur = function(){ if(o.value=="") { o.valueCache=""; o.value=o.tips; } else o.valueCache=o.value; } o.onfocus = function(){ o.value=o.valueCache; 
+</script> -->
+<!-- 
+<script>
+	$(chek).onclick.function(){
+		
+	}
+</script>
+ -->
 
-<!-- /wrapper -->
+
+
+
+
+
+
+
+
+
+
