--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -1,63 +1,40 @@
-<style>
-.wrapper{
-	padding:0.5rem 0.25rem;
-}
-.bd_word_container{
- position:relative;top:200px;color:#DF4243;font-weight:bold;text-align:center;
-}
-.bd_title{
-margin:0;font-size:15px;
-}
-.bd_number{
-margin:0;font-size:20px;	
-}
-.success_share_word{
-	color:#F05754;
-    padding:0.6rem 0.2rem 0 0.2rem;margin:0.2rem;font-size:15px;
-}
-.text_tip{
-	color:#333333;
-	margin:0;padding:0;text-align:center;
-	
-}
-.container p{
-	font-size:12px;
-	text-align: left;
-	margin:2px 0 2px 50px;
-}
-h4{
-	font-size: 15px;
-	font-weight: normal;
-}
-</style>
-<div id="wrapper" class="wrapper ">
-
-	<img src="wx_share/img/success_coupon_top.jpg" style="width:100%;max-height:400px;" />
-
-	<img src="wx_share/img/success_coupon_tip.jpg" style="max-height:180px;margin:0.3rem 1rem;" />
-
-
-	<!--
-	<header class="" style="text-align: center;height:200px;">
-
-			<img src="wx_share/img/coupon_success.jpg" style="width:200px;margin-top:80px;" />
-			<img src="wx_share/img/introd.jpg?v=2" style="width:100%;margin-top:50px;" />
-	</header>
-	<div  class="container " >
-		 <div  style="text-align: center;">
-					<img src="wx_share/img/qrcode_nuobei.jpg" style="width:150px;" >
-					<p>1 长按上方二维码关注【<span class="blue">诺贝</span>】</p>
-					<p>2 在微信号底部菜单【<span class="blue">我的保险劵</span>】投保</p>
-					<p>注：航空意外险请在乘坐航班前1天投保</p>
-		 </div>
-
-		 <h4 class="blue" style="text-align: center;">将福利<span class="red">免费送给好友</span>&emsp;你还可继续领取</h4>
-
-		 <div class="cell " style="text-align: center;" >
-					<div style="border:none">
-						<a href="javascript:void(0)"    class="btn btn_warning small_btn send_friend"    ng-click="showShareTip()" ><img src="wx_share/img/hb.png" >&nbsp;&nbsp;送给好友</a>
-					</div>
-				</div>
+<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=fdgdfgfdggf">
+<div id="wrapper" class="wrapper layout">
+	<div class="coupon_nav left">
+		<div class="one"></div>
+		<div class="hei_16">
+			<p></p>
+		</div>
+		<div class="er">2</div>
+		<div class="hei_276">
+			<p></p>
+		</div>
+		<div class="san">3</div>
 	</div>
-	-->
+	<div class="coupon_main left">
+			<div class="main_top">保险领取成功!</div>
+			<div class="main_cen">
+				<p>请前往[<span>诺贝</span>]公众号投保</p>
+				<img src="wx_share/img/erweima.png">
+				<p>长按二维码关注[<span>诺贝</span>]</p>
+			</div>
+			<div class="main_bot">
+				<p>点击[<span>诺贝</span>]公众号右下角</p>
+				<p>菜单“<span>我的保险劵</span>”</p>
+				<div class="kuang">
+					<ul></ul>
+                    <ul>
+                    	<li><span>我的保险劵<span></li>
+					  	<li>我的保单</li>
+					 	<li>联系我们</li> 
+				 		<img class="shou" src="wx_share/img/shou.png">
+                    </ul>
+				    <ul></ul>
+				</div>
+				<div class="footer_my">
+					<img src="wx_share/img/heng.png">
+					我的
+				</div>
+			</div>
+	</div>
 </div>
