--- a/app/partials/bd_list.html
+++ b/app/partials/bd_list.html
@@ -10,27 +10,31 @@
       <p class="default_text" ng-show="filtered.length==0" >暂时没有保单</p>
     <ul class="ul_container"   cg-busy="myPromise">
 
-
-
+    <div infinite-scroll="nextPage()" infinite-scroll-distance="0">
       <li class="list_item"   ng-repeat="order in filtered = (orders |filter:filterFn )">
         <div class="order_title" style="position:relative">订单号:{{order.order_no}} <span class="bd_status">{{order.create_time  |  date:'yyyy-MM-dd'}}</span></div>
         <div class="line"></div>
         <div>
-          <div ng-repeat="insurance in order.insurance_orders" ng-click="goDetail(insurance.order_no,order.status)">
-            <p style="position:relative;margin-top:13px;color:#6caaea">{{insurance.order_name}} <span class="bd_status_text" style="position:absolute;right:0;color:{{getBdColor(insurance.order_status)}}"  >{{getBdStatus(order.status,insurance.order_status)}} </span></p>
-            <div ng-repeat="people in insurance.insured_peoples">
-              <p>被保人:{{people.name}}</p>
-              <p>手机号:{{people.mobile}}</p>
-              <p>身份证:{{people.social_id}}</p>
-             </div>
-              <div class="line" style="clear:both;"></div>
-          </div>
-    
+            <div ng-repeat="insurance in order.insurance_orders" ng-click="goDetail(insurance.order_no,order.status)">
+              <p style="position:relative;margin-top:13px;color:#6caaea">{{insurance.order_name}} <span class="bd_status_text" style="position:absolute;right:0;color:{{getBdColor(insurance.order_status)}}"  >{{getBdStatus(order.status,insurance.order_status)}} </span></p>
+              <div ng-repeat="people in insurance.insured_peoples">
+                <p>被保人:{{people.name}}</p>
+                <p>手机号:{{people.mobile}}</p>
+                <p>身份证:{{people.social_id}}</p>
+               </div>
+                <div class="line" style="clear:both;"></div>
+            </div>
+         
          
           <div style="padding:10px 0;"  ng-show="order.status=='1' ||  order.status=='2'   || order.status=='3'   || order.status=='5' ">未支付:￥<span style="color:#f57590">{{order.premium/100 | number:2}}</span><div class="pay_button" ng-click="goPay(order.order_id,order.order_no,order.premium)">立即支付</div></div>
         </div>
       </li>
-
+      </div>
+      <div style="background-color: #fff;">
+      <div style="width:100px;margin:0 auto;text-align: center;background-color: #fff;">
+          <img src="img/loading.gif" style="width:50px;">
+      </div>
+    </div>
 
         <!--
       <li class="list_item"  ng-click="goDetail(order.order_no)"  ng-repeat="order in filtered = (orders |filter:filterFn )">
