--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -132,7 +132,13 @@
     .white-special{
     	color:#91bfff;
     }
-
+	.hex-v-center{
+		display:table-cell;vertical-align: middle;height:68px;width: 68px;
+		text-align: center;
+	}
+	.hide{
+		display: none;
+	}
 	/*
     .hex2.even {
         margin-top: 39px;
@@ -141,9 +147,10 @@
 
 </style>
 <header>
-	<img src="img/plane_h.png" class="plan" >意外保障评分
-	<span>{{data.aggregate_score}}分 <img src="img/arrow_03.jpg" class="arrow"></span>
+	<img src="img/plane_h.png" class="plan" >{{getInsuranceCNname()}}保障评分
+	<span ng-click="goBdmList()">{{data.aggregate_score}}分 <img src="img/arrow_03.jpg" class="arrow"></span>
 </header>
+<div  ng-show="data.aggregate_score>0">
 <div class="table-container" data-ng-init="init()">
 	<table >
 		<tr class="bd-tr">
@@ -151,19 +158,21 @@
 			<th>保额</th>
 			<th style="text-align:right;">评分</th>
 		</tr>
-		<tr class="bd-tr" ng-repeat="item in data.analysis">
+		<tr class="bd-tr" ng-repeat="item in data.analysis" ng-class="{'hide':$index>5}">
 			<td  style="text-align:left;">{{item.name}}</td>
-			<td>{{processMoney(item.sum_insured)}}</td>
-			<td  style="text-align:right;"> {{item.score}}分</td>
+			<td >{{processMoney(item.sum_insured)}}</td>
+			<td  style="text-align:right;" > {{item.score|number:2}}分</td>
 		</tr>
 	</table>
 </div>
 <div class="more">查看更多</div>
 <div style="background-color:#f5f5f5;height:20px;"></div>
+
+</div>
 <div>
 	<div class="hex-title-container">
 		<img src="img/safe.jpg" >
-		意外保障推荐 <span>如果投保?</span></div>
+		{{getInsuranceCNname()}}保障提升 <span  ng-click="goOldEducation();">如何投保?</span></div>
 	<div style="overflow:hidden;">
 	<div class="hex-container">
 
@@ -176,9 +185,9 @@
     </div>
 	 <div class="hex-row" ng-repeat="item in hex">
         <div class="hex"></div>
-        <div class="hex " ng-class="{true: 'blue', false: 'gray'}[item[0].insured]">{{item[0].name}}</div>
-        <div class="hex "  ng-class="{true: 'blue', false: 'gray'}[item[1].insured]">{{item[1].name}}</div>
-        <div class="hex "  ng-class="{true: 'blue', false: 'gray'}[item[2].insured]">{{item[2].name}}</div>
+        <div class="hex " ng-class="{true: 'blue', false: 'gray'}[item[1].insured]"  ng-click="hexClick(item[1].insured);"><div class="hex-v-center">{{item[1].name}}</div></div>
+        <div class="hex " ng-class="{true: 'blue', false: 'gray'}[item[0].insured]" ng-click="hexClick(item[0].insured);"><div class="hex-v-center">{{item[0].name}}</div></div>
+        <div class="hex " ng-class="{true: 'blue', false: 'gray'}[item[2].insured]"  ng-click="hexClick(item[2].insured);"><div class="hex-v-center">{{item[2].name}}</div></div>
         <div class="hex"></div>
     </div>
 
@@ -240,12 +249,12 @@
 
 <div class="cell pay_container" >
 		<div class="cell_hd cell_primary">
-			<a href="javascript:void(0)" class="btn btn_n_primary left"  id="submitButton">
-				<img src="img/plus_2.jpg" style="width:14px;vertical-align: -1px;">
+			<a href="javascript:void(0)" class="btn btn_n_primary left"  ng-click="goUpBd();" id="submitButton">
+				<img src="img/upload_icon.png" style="width:14px;vertical-align: -2px;">
 			上传保单</a>
 		</div>
 		<div class="cell_hd cell_primary">
-			<a href="javascript:void(0)" class="btn btn_n_primary right"   ng-click="submitbt()" id="submitButton" >提升保障</a>
+			<a href="javascript:void(0)" class="btn btn_n_primary right"    ng-click="goDingzhi()" id="submitButton" >提升保障</a>
 		</div>
 		
 </div>
@@ -253,7 +262,19 @@
 	$(function(){
 		var width = $(window).width()/2 -200;
 	    console.log("left:"+width);
-		$(".hex-container").css({'margin-left':width})
+		$(".hex-container").css({'margin-left':width});
+		$(".more").click(function(){
+			var html = $(this).html();
+			if(html=='查看更多'){
+					$("table").find("tr").show();
+					$(this).html("收起");
+			}else{
+				$("table").find("tr:gt(5)").hide();
+				$(this).html("查看更多");
+				$(window).scrollTop(0);
+			}
+		
+		});
 	})	
 
 </script>
