--- a/app/partials/bdm_list.html
+++ b/app/partials/bdm_list.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=92ecb63d763fba363c7dc6e2f46cbb56">
+<link rel="stylesheet" type="text/css" href="css/bdm_list.css?rev=2600659d8fe5433c5520f81d7abef880">
 <header>
 	<div class="left">
 		<!--
@@ -128,6 +128,6 @@
 </div>
 <div class="cell pay_container">
   <a href="javascript:void(0)" class="btn btn_dark_2_primary" ng-click="goBdUpload();" style="border-radius: 0px;">
-<img src="img/upload.png">&nbsp;上传保单</a>
+		<img src="img/upload_icon.png">&nbsp;上传保单</a>
 </div>
 
