--- a/app/css/bdm_list.css
+++ b/app/css/bdm_list.css
@@ -226,6 +226,9 @@ header .subtitle {
 	/*box-shadow:0px 4px 6px -2px #d2d2d2;*/
 	/*background: -webkit-linear-gradient(top,white 90%, #dadada 95%);*/
 }
+.hairlines .bottom{
+	height: 7px;
+}
 .bottom .linebox {
 	border-top: 1px solid #d2d2d2;
 	border-bottom: 1px solid #d2d2d2;
