--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -7,7 +7,7 @@ body{
   background-color: #f5f5f5;
 }
 .text_container {
-  margin-bottom: 80px;
+  /*margin-bottom: 80px;*/
 }
 .text_container p {
   text-align: center;
@@ -23,7 +23,7 @@ body{
 }
 
 .text_container .bd_yz {
- margin-top: 0.5rem;
+ margin-top: 0.9rem;
  font-size:0.17rem;
  color:#588dd4;
 }
