--- a/app/partials/list.html
+++ b/app/partials/list.html
@@ -24,8 +24,7 @@
     </div>
   </li>
 </ul>
-<ul ng-show="!isHaveResult" >
+<ul ng-show="!isHaveResult" class="cell_font" >
  
-   敬请期待...
- 
+   该分类下暂无产品...
 </ul>
