--- a/app/partials/toubao_dingzhi_all.html
+++ b/app/partials/toubao_dingzhi_all.html
@@ -276,7 +276,7 @@
 				<td >{{process_insured_money(plan.sum_insured)}}</td>
 				<td>1份</td>
 				<td class="red" style="text-align: right" >
-					<span ng-if="plan.premium">{{plan.premium/100}}元</span>
+					<span ng-if="plan.status==1">{{plan.premium/100}}元</span>
 					<div class="status {{get_taocan_css(plan.status)}}">{{taocan_status(plan.status)}}</div>
 				</td>
 			</tr>
