modify the bugs

--- a/app/css/bz.css
+++ b/app/css/bz.css
@@ -340,7 +340,7 @@
 	height:380px;
 	width:290px;
 
-	background: #fff url("../img/bz_7_blue.png") no-repeat center ;
+	background: #fff url("../img/bz_7_blue.jpg") no-repeat center ;
 	background-size:100%
 }
 
