--- a/app/partials/information.html
+++ b/app/partials/information.html
@@ -2,38 +2,46 @@
 <link rel="stylesheet" href="css/information.css?rev=3616d946eba0e345a7752c1632d5ee0a">
 <div  data-ng-init="init()" cg-busy="myPromise">
 	<ul class="claim_controller">
-		<li>
-			<p ng-show="data.age_restrictions.length>0"><img src="img/claim_information/logo.jpg" alt=""><span class="font_size29">年龄限制</span></p>
-			<a class="content"  ng-repeat="restriction in data.age_restrictions">{{restriction}}</a>
+		<li ng-if="data.age_notice">
+			<p><img src="img/claim_information/logo.jpg" alt=""><span class="font_size29">年龄限制</span></p>
+			<a class="content"  >{{data.age_notice}}</a>
 		</li>
-		<li ng-show="data.health_restrictions.length>0">
+	
+		<li ng-if="data.locale_notice">
+			<p >
+				<img src="img/claim_information/logo.jpg" >
+				<span>区域限制</span>
+			</p>
+			<a class="content" >	
+				{{data.locale_notice}}
+			</a>
+		</li>
+
+		<li ng-if="isHaveHealth">
 			<p>
 				<img src="img/claim_information/logo.jpg" >
 				<span>健康限制</span>
 			</p>
-			<a class="content" ng-repeat="restriction in data.health_restrictions">
-				{{restriction}}	
+			<a class="content" ng-repeat="notice in data.notices">
+				{{notice.insurance_name}} 	{{notice.plan_name}}<br/>
+				{{notice.health_notice}} 	
 			</a>
 		</li>
-		<li>
-			<p ng-show="data.locale_restrictions.length>0">
-				<img src="img/claim_information/logo.jpg" >
-				<span>区域限制</span>
-			</p>
-			<a class="content" ng-repeat="restriction in data.locale_restrictions">	
-				{{restriction}}
-			</a>
-		</li>
-		<li>
-			<p ng-show="data.extra_restrictions.length>0">
+		<li  ng-if="isExtranotice">
+			<p >
 				<img src="img/claim_information/logo.jpg">
 				<span>其他限制</span>
 			</p>
-			<a class="content" ng-repeat="restriction in data.extra_restrictions">	
-				{{restriction}}
+			<a class="content" ng-repeat="notice in data.notices">
+				{{notice.insurance_name}} 	{{notice.plan_name}}<br/>
+				{{notice.extra_notice}} 	
 			</a>
 		</li>
 	</ul>
+
+
+
+
 <div class="cut_container" >
 		<a class="cut_cell" ng-click="showTip()">
 			部分情况有
