modify the bugs

--- a/app/partials/index_part.html
+++ b/app/partials/index_part.html
@@ -11,7 +11,7 @@ body{
 }
 .text_container p {
   text-align: center;
-  line-height: 10px;
+  line-height: 0.07rem;
 }
 .text_container .subtitle {
  font-size:0.16rem;color:#999;
@@ -23,7 +23,7 @@ body{
 }
 
 .text_container .bd_yz {
- margin-top: 0.9rem;
+ margin-top: 0.7rem;
  font-size:0.17rem;
  color:#588dd4;
 }
