modify the bugs

--- a/app/wx_share/partials/index_part.html
+++ b/app/wx_share/partials/index_part.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/index.css?rev=fdafafaagfgf">
+<link rel="stylesheet" href="wx_share/css/index.css?rev=093089c016e918c915809b107e815aa3">
 	<div class="my_bd_controller">
 		<ul class="layout ul_contrl">
 			<li >
