--- a/app/wx_share/partials/success_coupon.html
+++ b/app/wx_share/partials/success_coupon.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=fdgdfgfdggf">
+<link rel="stylesheet" href="wx_share/css/success_coupon.css?rev=85a23c8d97330652fa4e99841697af3c">
 <div id="wrapper" class="wrapper layout">
 	<div class="coupon_nav left">
 		<div class="one"></div>
