--- a/app/partials/bd_education.html
+++ b/app/partials/bd_education.html
@@ -67,26 +67,25 @@
 		line-height: 40px;
 		border-bottom: 1px solid #e2e2e2;
 	}
-	.pay_container{
-	  overflow: hidden;position: fixed;bottom:0;width:100%;
 
-	}
-	.pay_container .left{
+	.fix_container .left{
 	  background-color: #fff;
 	  color:#1e4e8e;
 	  border-radius: 0;
-	  border-top:1px solid #e2e2e2;
 	  height:50px;
 	  line-height:50px;
-	  font-size: 14px;
+	  font-size: 15px;
 	}
-	.pay_container .right{
+	.fix_container .right{
 	  background-color: #1e4e8e;
 	  border-radius: 0;
-	  border-top:1px solid #e2e2e2;
 	  height:50px;
 	  line-height:50px;
-	  font-size: 14px;
+	  font-size: 15px;
+	}
+	.fix_container img{
+		width:14px;
+		vertical-align: -1.5px;
 	}
 	.hex-title-container{
 		height:0.5rem;
@@ -206,21 +205,15 @@
         <div class="hex"></div>
     </div>
 
-	 <div class="hex-row">
+	 <div class="hex-row"  ng-repeat="n in [] | range:tailLines">
         <div class="hex"></div>
         <div class="hex"></div>
         <div class="hex"></div>
         <div class="hex"></div>
         <div class="hex"></div>
     </div>
-    <div class="hex-row">
-        <div class="hex"></div>
-        <div class="hex"></div>
-        <div class="hex"></div>
-        <div class="hex"></div>
-        <div class="hex"></div>
-    </div>
-    
+
+
     <!--
     <div class="hex-row">
         <div class="hex"></div>
@@ -262,14 +255,14 @@
 	</div>
 </div>
 
-<div class="cell pay_container" >
+<div class=" fix_container" >
 		<div class="cell_hd cell_primary">
 			<a href="javascript:void(0)" class="btn btn_n_primary left"  ng-click="goUpBd();" id="submitButton">
 				<img src="img/upload_icon.png" style="width:14px;vertical-align: -2px;">
 			上传保单</a>
 		</div>
 		<div class="cell_hd cell_primary">
-			<a href="javascript:void(0)" class="btn btn_n_primary right"    ng-click="goDingzhi()" id="submitButton" >提升保障</a>
+			<a href="javascript:void(0)" class="btn btn_n_primary right"    ng-click="goDingzhi()" id="submitButton" ><img src="img/tsbz.png">&nbsp;提升保障</a>
 		</div>
 		
 </div>
